--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,16 @@ section.hero{
     display: grid;
     grid-template-columns: .4fr .6fr;
 }
+
+input[type="text"],
+input[type="email"],
+input[type="password"]{
+    @apply block my-4 w-full rounded-xl;
+    @apply border p-2  border-gray-400;
+}
+button{
+    @apply w-full border border-gray-300 font-semibold rounded-xl py-2;
+}
+button[type="submit"]{
+    @apply bg-primary border-0 text-white;
+}
