--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,11 @@ input[type="password"]{
     @apply block my-4 w-full rounded-xl;
     @apply border p-2  border-gray-400;
 }
+input[type="text"]:disabled,
+input[type="email"]:disabled,
+input[type="password"]:disabled{
+    @apply bg-gray-700;
+}
 button{
     @apply w-full border border-gray-300 font-semibold rounded-xl py-2;
 }
